2007-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Added ConjugateGradientsInitialize() and
	ConjugateGradientsTakeNSteps(). ConjugateGradients() still exists and
	uses these two new function.
	Idem for SteepestDescent.

2007-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* src/mol.cpp: changes OBMol::NewBond, fixes PR#1666785. AddBond() was
	resizing the _vbond vector and NewBond() used push_back to add items.
	This created a gap bewteen the bonds added by NewBond() and AddBond().
	The FOR_BONDS_OF_MOL iterator expects all bonds to be at the begin of
	the vector. Note: this also fixes the initial problem with the
	OBAngleData and OBTorsionData.

	* test/addhydrogens.cpp: added/deleted... (was used for debugging)

	* src/forcefield.cpp: changes "*logos << ..." to OBFFLog(...)

	* src/forcefields/forcefieldghemical.cpp: changes "*logos << ..." to 
	OBFFLog(...)

2007-02-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* data/ghemical.prm: Final update. All molecules from the validation
	ste are given correct atom types and charges.

	* src/forcefields/forcefieldghemical.cpp: Calculated energies comply
	with those from ghemical except for 1,4-scaling. Ring atoms are not
	always scaled in ghemical, not sure why.

	* src/forcefield.cpp: Added OBFFLog, fixes PR#1664279. (tested, but
	needs to replace all "*logos << ..." lines)
	Moved IsInSameRing from OBForceFieldMMFF94 to OBForceField.
	Test molecule from PR#1665765 minimizes correctly, but added cutoff
	accuracy to make sure.

	* tools/obmm.cpp: Added commands for DelHydrogens, GenerateCoordinates,
	SystematicRotorSearch and NumConformers.

	* include/openbabel/forcefield.cpp: Added a definition for isnan.
	(should be replaced with a better method in the math class??)

2007-02-22  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/mol.cpp: Added SetParent call to NewBond function.  Should resolve
	segfault issues related to bug 1665519.
